konga/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: konga-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: konga.ithub.space
    http:
      paths:
      - path: /
        backend:
          serviceName: konga-service
          servicePort: 1337
  tls:
  - hosts:
    - konga.ithub.space
    secretName: konga-ithub-space-prod-tls
